# adventofcode-2024

./: .gitignore  Cargo.toml
src/: day1.rs  day2.rs  day3.rs  day4.rs  template.rs_
